--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ button {
 
 }
 body {
-    background-image: url("background.jpg");
+    background-image: url("background.png");
     background-size: cover;
     background-position: 2;
     background-repeat: no-repeat;
