--- a/style.css
+++ b/style.css
@@ -1,12 +1,8 @@
-button {
-    background-color: blue;
-    
 
-}
 body {
     background-image: url("background.png");
     background-size: cover;
-    background-position: 2;
+    background-position: 0px;
     background-repeat: no-repeat;
     
 }
