--- a/style.css
+++ b/style.css
@@ -11,7 +11,8 @@ textarea {
     resize: none;
     position: relative;
     bottom: -250px;
-    left: 600px;
-    
-    
+    left: 600px;   
+}
+buttonsend {
+
 }
