--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 
 body {
-    background-image: url("background.png");
+    background-image: url("background.jpg");
     background-size: cover;
     background-position: 0px;
     background-repeat: no-repeat;
