--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 p.big {
-    font-size: 50px;
+    font-size: 70px;
 }
 input {
     position: absolute;
@@ -26,4 +26,8 @@ textarea {
 img {
     position: absolute;
 }
-
+p {
+    position: absolute;
+    top: -50px;
+    left: 700px;
+}
