--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ p.big {
     font-family: sans-serif;
 }
 input {
-    position: absolute;
+    position: relative;
     left: 606px;
     bottom: 390px;
 }
