--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ p.big {
     font-size: 70px;
     font-family: sans-serif;
 }
-button {
+input {
     position: absolute;
     left: 606px;
     bottom: 390px;
